@@ -522,6 +522,7 @@ static int PyGtkStyleHelper_SetItem(PyGtkStyleHelper_Object *self, int pos,
 	array[pos] = gdk_pixmap_ref(PyGdkWindow_Get(value));
       else
 	array[pos] = NULL;
+      return 0;
     }
   }
   g_assert_not_reached();
@@ -1551,7 +1552,7 @@ static PyObject *PyGdkWindow_PropertyChange(PyGdkWindow_Object *self,
 	    }
 	    nelements = PySequence_Length(pdata);
 	    data16 = g_new(guint16, nelements);
-	    data = (guchar *)data;
+	    data = (guchar *)data16;
 	    for (i = 0; i < nelements; i++) {
 		PyObject *item = PySequence_GetItem(pdata, i);
 		Py_DECREF(item);
@@ -1578,7 +1579,7 @@ static PyObject *PyGdkWindow_PropertyChange(PyGdkWindow_Object *self,
 	    }
 	    nelements = PySequence_Length(pdata);
 	    data32 = g_new(guint32, nelements);
-	    data = (guchar *)data;
+	    data = (guchar *)data16;
 	    for (i = 0; i < nelements; i++) {
 		PyObject *item = PySequence_GetItem(pdata, i);
 		Py_DECREF(item);
